# mnist-chest-xray-classification-pytorchlighning-tensorboard

./: .continuerules  .env-example  .gitattributes  .gitignore  LICENSE  README.md  debug_evaluate_model.py  demo_buisness_presentation.md  main.py  pyproject.toml  scrachpad.md  technical_presentation.md
notebooks/: experiment_data_loader.ipynb  exploratory_data_analysis.ipynb  validate_data_loader.ipynb
src/callbacks/: confusion_matrix.py
src/configs/: config.py
src/data/: datamodule.py
src/interpretability/: evaluation.py  explainers.py
src/models/: chestnets.py  custom_cnn.py  lightning_module.py
src/training/: trainer.py
src/utils/: helpers.py
